welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: Boolean does not take parameters
	else  ( tea>= 2*candy || candy >= 2*tea ) { (2) }
                                                  ^